js/js.translator/testData/incremental/invalidation/changeCompanionBlockChild/lib1/l1.0.kt
var staticInitParent = false

open class Parent {
    companion {
        val parentValue: Unit = run {
            staticInitParent = true
            Unit
        }
    }
}
